# ite

./: .gitignore  Makefile  README.md  bite.sh  ite.c  ite.cmb  ite.gresource.xml  iteapp.c  iteapp.h  iteappwin.c  iteappwin.h  main.c  meson.build
ui/: window.ui
